# myrmec

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/instructions/: agents-standards.instructions.md  engine-standards.instructions.md  myrmec-project.instructions.md  ui-standards.instructions.md
agents/: README.md  pyproject.toml
agents/e2e/: __init__.py  test_agent.py
agents/examples/: openai_agent.py  simple_agent.py
agents/myrmec/: __init__.py
agents/myrmec/agent/: __init__.py  agent.py  connection.py  context.py  errors.py  executor.py  http_client.py  logging_handler.py  messages.py  models.py  retry.py
agents/myrmec/agent/langchain/: __init__.py  executor.py
agents/myrmec/agent/tools/: __init__.py  file_tools.py  git_tools.py
agents/myrmec_agent/: __init__.py  agent.py  client.py  heartbeat.py
agents/tests/: test_context_observability.py  test_errors.py  test_retry.py
control/: README.md
control/engine/: README.md  pom.xml
control/ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
control/ui/src/: main.tsx  (+1 more)
scripts/: create-registration-key.ps1  setup-e2e-data.ps1  start-agent.ps1  start-engine-e2e.ps1  start-engine.ps1  test-addressbook-e2e.ps1  test-step1.ps1  test-step1.sh
website/: .dockerignore  .env.example  .gitignore  astro.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
website/.instructions/: 01-design-system.md  02-hero-vision.md  03-use-cases-logic.md  05-contact.md  instructions.md
website/public/: contact.php  waitlist.php
(+359 files in other folders)
