[project]
name = "myrmec-agent"
version = "0.1.0"
description = "Myrmec Agent SDK for connecting to the Control Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myrmec"]
